--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,6 +16,8 @@
 
 <ion-content>
   <div class="main_content_div">
-    
+    <ion-item *ngFor="let p of propiedad">
+      {{p.nombre}}
+    </ion-item>
   </div>
 </ion-content>
