--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -108,15 +108,17 @@
 
             <ion-grid [fixed]="true">
               <ion-row>
-                <ion-col><ion-icon name="home"></ion-icon></ion-col>
-                <ion-col><ion-label>{{P.tipo}}</ion-label></ion-col>
-                <ion-col><ion-label>{{P.numero}}</ion-label></ion-col>
-                <ion-col><ion-label>{{P.direccion}}</ion-label></ion-col>
-                <ion-col><ion-label>{{P.comuna}}</ion-label></ion-col>
-                <ion-col><ion-icon name="person-circle" style="margin: 5px;"></ion-icon></ion-col>
-                <ion-col><ion-label>{{P.contacto}}</ion-label></ion-col>
-                <ion-col><ion-icon name="call-outline"></ion-icon></ion-col>
-                <ion-col><ion-label>{{P.telefono}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
+                <ion-col size="auto"><ion-label>{{P.tipo}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label>{{P.numero}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label>{{P.direccion}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="auto"><ion-icon name="person-circle" style="margin: 5px;"></ion-icon></ion-col>
+                <ion-col size="auto"><ion-label>{{P.contacto}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-icon name="call"></ion-icon></ion-col>
+                <ion-col size="auto"><ion-label>{{P.telefono}}</ion-label></ion-col>
               </ion-row>
             </ion-grid>
             </ion-item>
