--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -8,34 +8,24 @@
     <ion-title>Propiedad</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-  <div class="main_content_div">
-   
-      <ion-card-header *ngIf="enablelista">
-        <ion-button (click)="bntNuevo()" >
-          <ion-label>Nuevo</ion-label>
-          <ion-icon name="add"></ion-icon>
-        </ion-button>
-      </ion-card-header>
-      <ion-card-content>
+<!--contenedor estandar-->
+<ion-content> 
+<!--este div contiene todo -->
+  <div class="main_content_div"> 
         <!--contenedor de agregar-->
-        <div *ngIf="enableNewPropiedad">
-          <ion-item>
-
-            <ion-button slot="end" (click)="enableNewPropiedad = false " (click)="enablelista = true ">
+        <ion-card-header  *ngIf="!enablelista">     
+          <ion-button  (click)="enableNewPropiedad = false " (click)="enablelista = true">
             <ion-label>cancelar</ion-label>
             <ion-icon name="close"></ion-icon>
-            </ion-button>
-
-          </ion-item>
-          <ion-item>
+          </ion-button>
+        </ion-card-header>
+                    
+        <ion-card *ngIf="enableNewPropiedad"> 
             
-              <ion-col size="auto">
-                <ion-label  >Nombre Propiedad</ion-label>
-              </ion-col>
-              <ion-col  >
-                <ion-input [(ngModel)]="newPropiedad.nombre"  placeholder="Nombre" name="Nombre" type="text" inputmode="text"></ion-input>
+             <ion-item>
+             <ion-col size="auto"><ion-label  >Nombre Propiedad</ion-label></ion-col>
+              <ion-col>
+                 <ion-input [(ngModel)]="newPropiedad.nombre"  placeholder="Nombre" name="Nombre" type="text" inputmode="text"></ion-input>
               </ion-col>  
           </ion-item>
           <ion-item>
@@ -91,27 +81,30 @@
             <ion-input [(ngModel)]="newPropiedad.telefono" placeholder="+569 000 000" type="phone"></ion-input>
           </ion-col>
           </ion-item>
-          <ion-item class="ion-padding">
+        
           <ion-col>
           <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " (click)="enablelista = true " expand="block" >Guardar</ion-button>
         </ion-col>
-        </ion-item>
-        
-        </div>
+            
+        </ion-card>
         <!--listas de propiedades Cascada-->
-
-        
+        <ion-card-header *ngIf="enablelista">
+          <ion-button (click)="bntNuevo()" >
+            <ion-label>Nuevo</ion-label>
+            <ion-icon name="add"></ion-icon>
+          </ion-button>
+        </ion-card-header>
+        <ion-card *ngFor="let P of Propiedades">
         <ion-accordion-group *ngIf="enablelista" [multiple]="true" [value]="['first', 'third']" >
-          <ion-accordion *ngFor="let P of Propiedades">
-          <ion-item slot="header" >  
-              
-
+        
+          <ion-accordion >
+            <ion-item slot="header" >      
             <ion-grid [fixed]="true">
               <ion-row>
                 <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
                 <ion-col size="auto"><ion-label>{{P.tipo}}</ion-label></ion-col>
-                <ion-col size="auto"><ion-label>{{P.numero}}</ion-label></ion-col>
-                <ion-col size="auto"><ion-label>{{P.direccion}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label>{{P.numero}},</ion-label></ion-col>
+                <ion-col size="auto"><ion-label>{{P.direccion}},</ion-label></ion-col>
                 <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
               </ion-row>
               <ion-row>
@@ -140,6 +133,7 @@
             </ion-item>
           </ion-accordion>
         </ion-accordion-group>
-      </ion-card-content>
+        </ion-card>
+      
   </div>
 </ion-content>
