--- a/src/app/componentes/propiedad/propiedad.component.html
+++ b/src/app/componentes/propiedad/propiedad.component.html
@@ -1,10 +1,10 @@
-<ion-item>
+<ion-card><ion-item>
   <ion-grid [fixed]="true">
     <ion-row>
       <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
       <ion-col size="auto"><ion-label>{{propiedad.tipo}}</ion-label></ion-col>
-      <ion-col size="auto"><ion-label>{{propiedad.numero}}</ion-label></ion-col>
-      <ion-col size="auto"><ion-label>{{propiedad.direccion}}</ion-label></ion-col>
+      <ion-col size="auto"><ion-label>{{propiedad.numero}},</ion-label></ion-col>
+      <ion-col size="auto"><ion-label>{{propiedad.direccion}},</ion-label></ion-col>
       <ion-col size="auto"><ion-label>{{propiedad.comuna}}</ion-label></ion-col>
     </ion-row>
     <ion-row>
@@ -15,3 +15,4 @@
     </ion-row>
   </ion-grid>
 </ion-item>
+</ion-card>
