--- a/src/app/pages/bienvenido/bienvenido.page.html
+++ b/src/app/pages/bienvenido/bienvenido.page.html
@@ -2,7 +2,7 @@
     <div class="main_content_div">
         
          <div class="logo">
-            <img  src="assets/imgs/logo1.png">
+            <img  src="assets/imgs/logo.png">
          </div>
                 
           
