--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -13,7 +13,7 @@
 <!--este div contiene todo -->
   <div class="main_content_div"> 
         <!--contenedor de agregar-->
-        <ion-card-header  *ngIf="!enablelista">     
+        <ion-card-header slot="end" *ngIf="!enablelista">     
           <ion-button  (click)="enableNewPropiedad = false " (click)="enablelista = true">
             <ion-label>cancelar</ion-label>
             <ion-icon name="close"></ion-icon>
@@ -116,20 +116,41 @@
             </ion-grid>
             </ion-item>
             <ion-item  slot="content">
-                 <ion-col >
-                      <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
-                      <ion-icon name="cash-outline" style="margin: 5px;"></ion-icon><ion-label>Cuentas</ion-label>
-                      </ion-button>
-                      <ion-button (click)="go()" color="secondary" size="small" style="margin: 5px;">
-                      <ion-icon name="archive-outline" style="margin: 5px;"></ion-icon><ion-label>Tareas</ion-label>
-                      </ion-button>
-                      <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
-                      <ion-icon name="create-outline"></ion-icon>
-                      </ion-button>
-                      <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
-                      <ion-icon name="trash-outline"></ion-icon>
-                      </ion-button>
-                  </ion-col>
+              <ion-grid [fixed]="true">
+                
+              <ion-row>
+                <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
+                <ion-col size="auto"><ion-label>Aqui detalles de cuentas  agua</ion-label></ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
+                <ion-col size="auto"><ion-label>Aqui detalles de cuentas electricidad</ion-label></ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
+                <ion-col size="auto"><ion-label>Aqui detalles de cuentas gas</ion-label></ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
+                <ion-col size="auto"><ion-label>Aqui detalles de cuentas internet</ion-label></ion-col>
+              </ion-row>
+
+              <ion-row>
+                <ion-col >
+                <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
+                <ion-icon name="cash-outline" style="margin: 5px;"></ion-icon><ion-label>Cuentas</ion-label>
+                </ion-button>
+                <ion-button (click)="go()" color="secondary" size="small" style="margin: 5px;">
+                <ion-icon name="archive-outline" style="margin: 5px;"></ion-icon><ion-label>Tareas</ion-label>
+                </ion-button>
+                <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
+                <ion-icon name="create-outline"></ion-icon>
+                </ion-button>
+                <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
+                <ion-icon name="trash-outline"></ion-icon>
+                </ion-button>
+            </ion-col></ion-row></ion-grid>
+                 
             </ion-item>
           </ion-accordion>
         </ion-accordion-group>
