--- a/src/app/backend/cuentas/cuentas.component.html
+++ b/src/app/backend/cuentas/cuentas.component.html
@@ -10,27 +10,18 @@
 </ion-header>
 
 <ion-content>
-
- 
-    <ion-card-header>
-
-      <ion-button (click)="bntNuevo()">
-        <ion-label>Nuevo</ion-label>
-        <ion-icon name="add"></ion-icon>
-      </ion-button>
-    </ion-card-header>
-  
+  <div class="main_content_div">
       <!--contenedor de agregar-->
-      <div *ngIf="enableNewCuentas" class="main_content_div">
-        <ion-item>
+      <ion-card-header  *ngIf="enableNewCuentas">     
+        <ion-button  (click)="enableNewCuentas = false " (click)="enablelista = true ">
+          <ion-label>cancelar</ion-label>
+          <ion-icon name="close"></ion-icon>
+        </ion-button>
+      </ion-card-header>
 
-          <ion-button slot="end" (click)="enableNewCuentas = false " (click)="enablelista = true ">
-            <ion-icon name="close"></ion-icon>
-          </ion-button>
-
-        </ion-item>
+      <ion-card *ngIf="enableNewCuentas">
         <ion-item>
-          <ion-label position="floating">tipoCuenta</ion-label>
+          <ion-label >tipoCuenta</ion-label>
           <ion-select [(ngModel)]="newCuentas.tipoCuenta" label="Popover" interface="popover" placeholder="Cuentas">
             <ion-select-option value="Agua">Agua</ion-select-option>
             <ion-select-option value="Luz">Luz</ion-select-option>
@@ -41,51 +32,68 @@
         </ion-item>
         
         <ion-item>
-          <ion-label position="floating">Estado</ion-label>
+          <ion-label >Estado</ion-label>
           <ion-select [(ngModel)]="newCuentas.estado" label="Popover" interface="popover" placeholder="Estado">
             <ion-select-option value="pagado">Pagado</ion-select-option>
             <ion-select-option value="nopago">No Pagado</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">valor</ion-label>
+          <ion-label >valor</ion-label>
           <ion-input [(ngModel)]="newCuentas.valor" placeholder="1233" type="number" inputmode="numeric"> </ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">idPropiedad</ion-label>
+          <ion-label >idPropiedad</ion-label>
           <ion-input [(ngModel)]="newCuentas.idPropiedad" placeholder="id propiedad" type="text" inputmode="text">
           </ion-input>
         </ion-item>
         <ion-item>
-
           <ion-button (click)="guardarCuentas()" (click)="enableNewCuentas = false" (click)="enablelista = true "
-             expand="block" shape="round">Guardar</ion-button>
+             expand="block" >Guardar</ion-button>
         </ion-item>
-      </div>
+      </ion-card>
       <!--listas de Cuentas-->
-<ion-card *ngIf="enablelista">
-  
-      <div  *ngFor="let P of Cuentas">
+      <ion-card-header *ngIf="enablelista">
+        <ion-button (click)="bntNuevo()">
+          <ion-label>Nuevo</ion-label>
+          <ion-icon name="add"></ion-icon>
+        </ion-button>
+      </ion-card-header>
+      <ion-card *ngFor="let P of Cuentas">
+        <ion-accordion-group *ngIf="enablelista" [multiple]="true" [value]="['first', 'third']" >
+          <ion-accordion >
+            <ion-item slot="header" >
         
-      <ion-grid  [fixed]="true">
-        <ion-row>
-          <ion-col><ion-label>TipoCuenta: {{P.tipoCuenta}}</ion-label></ion-col>
-          <ion-col><ion-label>Empresa: {{P.valor}}</ion-label></ion-col>
-          <ion-col><ion-label>Estado: {{P.estado}}</ion-label></ion-col>
-          <ion-col>
+        <ion-grid  [fixed]="true" >
+          <ion-row>
+           <ion-col size="auto"><ion-label>TipoCuenta: {{P.tipoCuenta}}</ion-label></ion-col>
+           <ion-col size="auto"><ion-label>Empresa: {{P.valor}}</ion-label></ion-col>
+           <ion-col size="auto"><ion-label>Estado: {{P.estado}}</ion-label></ion-col>
+         </ion-row>
+      </ion-grid>
+    </ion-item>
+    <ion-item  slot="content">
+      <ion-grid [fixed]="true">
+        <ion-row >
+          <ion-col  size="auto">
             <ion-button (click)="newCuentas = P; enableNewCuentas = true; enablelista = false " color="warning"  style="margin: 5px;"
               size="small">
               <ion-icon name="create-outline"></ion-icon>
             </ion-button>
+          </ion-col>
+          <ion-col size="auto">
             <ion-button (click)="deleteCuentas(P)" color="danger"  style="margin: 5px;" size="small">
               <ion-icon name="trash-outline"></ion-icon>
             </ion-button>
           </ion-col>
         </ion-row>
+
       </ion-grid>
-          
-          
-        </div>
+    </ion-item>  
+  
+  </ion-accordion>
+  </ion-accordion-group>     
     </ion-card>
 
+  </div>
 </ion-content>
