--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -12,16 +12,20 @@
 <ion-content> 
 <!--este div contiene todo -->
   <div class="main_content_div"> 
-    <ion-card style="--background:  #808081; max-width: 800px; margin: auto;" >
+  <ion-card style="--background:  #808081; max-width: 800px; margin: auto;" >
         <!--contenedor de agregar-->
-    <ion-card-header  *ngIf="!enablelista">    
-          <ion-button  (click)="enableNewPropiedad = false " (click)="enablelista = true">
-            <ion-label>cancelar</ion-label>
-            <ion-icon name="close"></ion-icon>
-          </ion-button>
-    </ion-card-header>    
-        <ion-card-content> 
-      <div *ngIf="enableNewPropiedad">
+    <ion-card-header>
+      <ion-button *ngIf="enablelista" (click)="bntNuevo()" >
+        <ion-label>Nuevo</ion-label>
+        <ion-icon name="add"></ion-icon>
+      </ion-button>
+      <ion-button *ngIf="!enablelista" (click)="enableNewPropiedad = false " (click)="enablelista = true" >
+         <ion-label>cancelar</ion-label>
+         <ion-icon name="close"></ion-icon>
+      </ion-button>
+        </ion-card-header>    
+        <ion-card-content *ngIf="enableNewPropiedad"> 
+      
           <ion-item>
             <ion-label >comuna</ion-label>
             <ion-select  [(ngModel)]="newPropiedad.comuna" label="Popover" interface="popover">
@@ -63,7 +67,7 @@
           <ion-item>
             <ion-col size="auto"><ion-label  >Referencia</ion-label></ion-col>
              <ion-col>
-                <ion-input [(ngModel)]="newPropiedad.nombre"  placeholder="Nombre" name="Nombre" type="text" inputmode="text"></ion-input>
+                <ion-input [(ngModel)]="newPropiedad.referencia"  placeholder="Referencia" name="referencia" type="text" inputmode="text"></ion-input>
              </ion-col> 
              </ion-item> 
              <!--  espero agregar contacto con el detalle de propietario o arendatario
@@ -84,15 +88,9 @@
           <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " (click)="enablelista = true " expand="block" >Guardar</ion-button>
         </ion-col>
          
-          </div>  
+        
         </ion-card-content>
         <!--listas de propiedades Cascada-->
-        <ion-card-header *ngIf="enablelista">
-          <ion-button (click)="bntNuevo()" >
-            <ion-label>Nuevo</ion-label>
-            <ion-icon name="add"></ion-icon>
-          </ion-button>
-        </ion-card-header>
         <ion-card-content *ngFor="let P of Propiedades">
         <ion-accordion-group *ngIf="enablelista" [multiple]="true" [value]="['first', 'third']" >
         
@@ -111,6 +109,7 @@
                 <ion-col size="auto"><ion-label>{{P.contacto}}</ion-label></ion-col>
                 <ion-col size="auto"><ion-icon name="call"></ion-icon></ion-col>
                 <ion-col size="auto"><ion-label>{{P.telefono}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label>{{P.referencia}}</ion-label></ion-col>
               </ion-row>
             </ion-grid>
             </ion-item>
