--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <ion-app>
 
+<!--asignacion de menu-->
+
+
+
+
+
+<!--asignacion de menu-->
+
+
   <ion-split-pane contentId="main">
 
     <ion-menu contentId="main" menuId="principal">
