--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -29,71 +29,8 @@
          <ion-icon name="close"></ion-icon>
       </ion-button>
         </ion-card-header>
-         <!--listas de propiedades Cascada-->
-         <ion-card-content *ngFor="let P of Propiedades">
-          <ion-accordion-group *ngIf="enablelista" [multiple]="true" [value]="['first', 'third']" >
-          
-            <ion-accordion >
-              <ion-item slot="header" >      
-              <ion-grid [fixed]="true">
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.tipo}}</ion-label></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.numero}},</ion-label></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.direccion}},</ion-label></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="person-circle" style="margin: 5px;"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.contacto}}</ion-label></ion-col>
-                  <ion-col size="auto"><ion-icon name="call"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.telefono}}</ion-label></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.referencia}}</ion-label></ion-col>
-                </ion-row>
-              </ion-grid>
-              </ion-item>
-              <ion-item  slot="content">
-                <ion-grid [fixed]="true">
-                  
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas  agua</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas electricidad</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas gas</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas internet</ion-label></ion-col>
-                </ion-row>
-  
-                <ion-row>
-                  <ion-col >
-                  <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
-                  <ion-icon name="cash-outline" style="margin: 5px;"></ion-icon><ion-label>Cuentas</ion-label>
-                  </ion-button>
-                  <ion-button (click)="gotarea()" color="secondary" size="small" style="margin: 5px;">
-                  <ion-icon name="archive-outline" style="margin: 5px;"></ion-icon><ion-label>Tareas</ion-label>
-                  </ion-button>
-                  <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
-                  <ion-icon name="create-outline"></ion-icon>
-                  </ion-button>
-                  <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
-                  <ion-icon name="trash-outline"></ion-icon>
-                  </ion-button>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-              </ion-item>
-            </ion-accordion>
-          </ion-accordion-group>
-          </ion-card-content>    
-        <!--contenedor de agregar-->
+        
+                <!--contenedor de agregar-->
         <ion-card-content *ngIf="enableNewPropiedad"> 
       
           <ion-item>
@@ -159,8 +96,73 @@
         </ion-col>
          
         
-        </ion-card-content>
-       
+      </ion-card-content>
+         <!--listas de propiedades Cascada-->
+         <div  *ngIf="enablelista">
+          <ion-card *ngFor="let P of Propiedades" >
+          <ion-accordion-group  [multiple]="true" [value]="['first', 'third']" >
+          
+            <ion-accordion >
+              <ion-item slot="header" >      
+              <ion-grid [fixed]="true">
+                <ion-row>
+                  <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
+                  <ion-col size="auto"><ion-label>{{P.tipo}}</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>{{P.numero}},</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>{{P.direccion}},</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="auto"><ion-icon name="person-circle" style="margin: 5px;"></ion-icon></ion-col>
+                  <ion-col size="auto"><ion-label>{{P.contacto}}</ion-label></ion-col>
+                  <ion-col size="auto"><ion-icon name="call"></ion-icon></ion-col>
+                  <ion-col size="auto"><ion-label>{{P.telefono}}</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>{{P.referencia}}</ion-label></ion-col>
+                </ion-row>
+              </ion-grid>
+              </ion-item>
+              <ion-item  slot="content">
+                <ion-grid [fixed]="true">
+                  
+                <ion-row>
+                  <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
+                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas  agua</ion-label></ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
+                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas electricidad</ion-label></ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
+                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas gas</ion-label></ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
+                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas internet</ion-label></ion-col>
+                </ion-row>
+  
+                <ion-row>
+                  <ion-col >
+                  <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
+                  <ion-icon name="cash-outline" style="margin: 5px;"></ion-icon><ion-label>Cuentas</ion-label>
+                  </ion-button>
+                  <ion-button (click)="gotarea()" color="secondary" size="small" style="margin: 5px;">
+                  <ion-icon name="archive-outline" style="margin: 5px;"></ion-icon><ion-label>Tareas</ion-label>
+                  </ion-button>
+                  <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
+                  <ion-icon name="create-outline"></ion-icon>
+                  </ion-button>
+                  <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
+                  <ion-icon name="trash-outline"></ion-icon>
+                  </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+              </ion-item>
+            </ion-accordion>
+          </ion-accordion-group>
+        </ion-card>
+         </div>    
       </ion-card>
   </div>
 </ion-content>
