--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -115,10 +115,12 @@
                 <ion-row>
                   <ion-col size="auto"><ion-icon name="person-circle" style="margin: 5px;"></ion-icon></ion-col>
                   <ion-col size="auto"><ion-label>{{P.contacto}}</ion-label></ion-col>
-                  <ion-col size="auto"><ion-icon name="call"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.telefono}}</ion-label></ion-col>
+                        <ion-col size="auto" ><ion-icon name="call"></ion-icon></ion-col>
+                        <ion-col size="auto" ><ion-label >{{P.telefono}}</ion-label></ion-col>   
+
                   <ion-col size="auto"><ion-label>{{P.referencia}}</ion-label></ion-col>
                 </ion-row>
+          
               </ion-grid>
               </ion-item>
               <ion-item  slot="content">
@@ -144,11 +146,14 @@
                 <ion-row>
                   <ion-col >
                   <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
-                  <ion-icon name="cash-outline" style="margin: 5px;"></ion-icon><ion-label>Cuentas</ion-label>
+                  <ion-icon name="cash-outline" ></ion-icon><ion-label>Cuentas</ion-label>
                   </ion-button>
                   <ion-button (click)="gotarea()" color="secondary" size="small" style="margin: 5px;">
-                  <ion-icon name="archive-outline" style="margin: 5px;"></ion-icon><ion-label>Tareas</ion-label>
+                  <ion-icon name="archive-outline" ></ion-icon><ion-label>Tareas</ion-label>
                   </ion-button>
+                  <ion-button href="https://api.whatsapp.com/send?phone=56{{P.telefono}}&text=" color="success" size="small" style="margin: 5px;">
+                    <ion-icon name="logo-whatsapp"></ion-icon>
+                    </ion-button>
                   <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
                   <ion-icon name="create-outline"></ion-icon>
                   </ion-button>
