--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -35,7 +35,12 @@
         
                 <!--contenedor de agregar-->
         <ion-card-content *ngIf="enableNewPropiedad"> 
-      
+          <ion-item>
+            <ion-col size="auto"><ion-label  >Id Propiedad</ion-label></ion-col>
+             <ion-col>
+                <ion-input [(ngModel)]="newPropiedad.id_propiedad"  placeholder="PROD0001" name="ID" type="text" inputmode="text"></ion-input>
+             </ion-col> 
+             </ion-item>
           <ion-item>
             <ion-label >comuna</ion-label>
             <ion-select  [(ngModel)]="newPropiedad.comuna" label="Popover" interface="popover">
@@ -52,8 +57,7 @@
               <ion-select-option value="La Reina">La Reina</ion-select-option>
               <ion-select-option value="Macul">Macul</ion-select-option>
               <ion-select-option value="Conchalí">Conchalí</ion-select-option>
-            </ion-select>
-         
+            </ion-select>   
           </ion-item>
           <ion-item>
             <ion-col size="auto"><ion-label>Direccion</ion-label></ion-col>
@@ -80,25 +84,9 @@
                 <ion-input [(ngModel)]="newPropiedad.referencia"  placeholder="Referencia" name="referencia" type="text" inputmode="text"></ion-input>
              </ion-col> 
              </ion-item> 
-             <!--  espero agregar contacto con el detalle de propietario o arendatario
-          <ion-item> 
-            <ion-col size="auto"><ion-label >contacto</ion-label></ion-col>
-            <ion-col>
-            <ion-input [(ngModel)]="newPropiedad.contacto" placeholder="persona ejemplo" type="text" inputmode="text"></ion-input>
-            </ion-col>
-          </ion-item>
-          <ion-item>
-            <ion-col size="auto"><ion-label >Telefono</ion-label></ion-col>
-            <ion-col>
-            <ion-input [(ngModel)]="newPropiedad.telefono" placeholder="+569 000 000" type="phone"></ion-input>
-          </ion-col>
-          </ion-item>
-        -->
           <ion-col>
           <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " (click)="enablelista = true " expand="block" >Guardar</ion-button>
-        </ion-col>
-         
-        
+        </ion-col>      
       </ion-card-content>
  
          <!--listas de propiedades Cascada-->
@@ -185,6 +173,9 @@
                   <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
                   <ion-icon name="trash-outline"></ion-icon>
                   </ion-button>
+                  <ion-button routerLink="['tareas']"  size="small" style="margin: 5px;">
+                    <ion-icon name="create-outline"></ion-icon><ion-label>contacto</ion-label>
+                    </ion-button>
                   
               </ion-col>
               
