--- a/src/app/pages/tareas/tareas.component.html
+++ b/src/app/pages/tareas/tareas.component.html
@@ -17,9 +17,9 @@
 <ion-content>
   <div class="main_content_div">
  
-<div *ngFor="let propiedad of propiedad">
+<div>
 
-  <app-propiedad [propiedad]=propiedad></app-propiedad>
+  
 
 </div>
   
