--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -109,36 +109,12 @@
                   <ion-col size="auto"><ion-label>{{P.contacto}}</ion-label></ion-col>
                         <ion-col size="auto" ><ion-icon name="call"></ion-icon></ion-col>
                         <ion-col size="auto" ><ion-label >{{P.telefono}}</ion-label></ion-col>   
-
                   <ion-col size="auto"><ion-label>{{P.referencia}}</ion-label></ion-col>
                 </ion-row>
-          
               </ion-grid>
               </ion-item>
               <ion-item  slot="content">
-                     <!--agregar contacto-->
-      <div *ngIf="enableNewContacto"> 
-        <ion-item>
-          <ion-col size="auto"><ion-label >contacto</ion-label></ion-col>
-          <ion-col>
-          <ion-input [(ngModel)]="newPropiedad.contacto" placeholder="persona ejemplo" type="text" inputmode="text"></ion-input>
-          </ion-col>
-        </ion-item>
-        <ion-item>
-          <ion-col size="auto"><ion-label >Telefono</ion-label></ion-col>
-          <ion-col>
-          <ion-input [(ngModel)]="newPropiedad.telefono" placeholder="+569 000 000" type="phone"></ion-input>
-        </ion-col>
-        </ion-item>
-     
-        <ion-col>
-        <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " (click)="enablelista = true " expand="block" >Guardar</ion-button>
-      </ion-col>
-       
-      
-    </div>
                 <ion-grid [fixed]="true">
-                  
                 <ion-row>
                   <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
                   <ion-col size="auto"><ion-label>Aqui detalles de cuentas  agua</ion-label></ion-col>
@@ -155,13 +131,12 @@
                   <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
                   <ion-col size="auto"><ion-label>Aqui detalles de cuentas internet</ion-label></ion-col>
                 </ion-row>
-  
                 <ion-row>
                   <ion-col >
                   <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
                   <ion-icon name="cash-outline" ></ion-icon><ion-label>Cuentas</ion-label>
                   </ion-button>
-                  <ion-button (click)="newContacto = P; enableNewContacto = true; enablelista = false"  color="secondary" size="small" style="margin: 5px;">
+                  <ion-button   color="secondary" size="small" style="margin: 5px;">
                   <ion-icon name="archive-outline" ></ion-icon><ion-label>Tareas</ion-label>
                   </ion-button>
                   <ion-button href="https://api.whatsapp.com/send?phone=56{{P.telefono}}&text=" color="success" size="small" style="margin: 5px;">
@@ -173,7 +148,7 @@
                   <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
                   <ion-icon name="trash-outline"></ion-icon>
                   </ion-button>
-                  <ion-button routerLink="['tareas']"  size="small" style="margin: 5px;">
+                  <ion-button  [routerLink]="['/tareas',P.id]" size="small" style="margin: 5px;">
                     <ion-icon name="create-outline"></ion-icon><ion-label>contacto</ion-label>
                     </ion-button>
                   
