--- a/src/app/backend/cuentas/cuentas.component.scss
+++ b/src/app/backend/cuentas/cuentas.component.scss
@@ -37,3 +37,18 @@
         margin-top: 20px;
     }
 }
+.custom-background {
+  background-color: #f2f2f2; /* Cambia este color por el gris deseado */
+}
+
+.error-label {
+  color: red;
+  font-size: 12px;
+  margin-left: 5px;
+}
+
+.error-label ion-icon {
+  color: red; /* Cambia este color según tus preferencias */
+  font-size: 16px;
+  margin-right: 5px;
+}
