--- a/src/global.scss
+++ b/src/global.scss
@@ -121,12 +121,12 @@ ion-card{
         font-family: 'semi-bold';
         font-size: 26px;
         text-align: center;
-        color: white;
+        color: black;
     }
 
     .small_lbl {
         text-align: center;
-        color: white;
+        color: black;
         font-size: 14px;
         margin-bottom: 30px;
     }
