--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -48,6 +48,7 @@
               <ion-select-option value="Quilicura">Quilicura</ion-select-option>
               <ion-select-option value="Recoleta">Recoleta</ion-select-option>
               <ion-select-option value="Renca">Renca</ion-select-option>
+              <ion-select-option value="Quinta Normal">Quinta Normal</ion-select-option>
               <ion-select-option value="Las Condes">Las Condes</ion-select-option>
               <ion-select-option value="Lo Barnechea">Lo Barnechea</ion-select-option>
               <ion-select-option value="Providencia">Providencia</ion-select-option>
@@ -94,6 +95,7 @@
               <ion-item slot="header" >      
               <ion-grid [fixed]="true">
                 <ion-row>
+                  <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
                   <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
                   <ion-col size="auto"><ion-label>{{P.tipo}}</ion-label></ion-col>
                   <ion-col size="auto"><ion-label>{{P.numero}},</ion-label></ion-col>
@@ -109,6 +111,13 @@
                 </ion-row>
               </ion-grid>
               </ion-item>
+<ion-item>
+  <div >
+    <ion-label></ion-label>
+    <ion-label></ion-label>
+  </div>
+</ion-item>
+
               <ion-item  slot="content">
                 <ion-grid [fixed]="true">
                 <ion-row>
@@ -132,7 +141,7 @@
                   <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
                   <ion-icon name="cash-outline" ></ion-icon><ion-label>Cuentas</ion-label>
                   </ion-button>
-                  <ion-button [routerLink]="['/contacto']" color="secondary" size="small" style="margin: 5px;">
+                  <ion-button  (click)="addContacto(P)" color="secondary" size="small" style="margin: 5px;">
                   <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
                   </ion-button>
                   <ion-button href="https://api.whatsapp.com/send?phone=56{{P.telefono}}&text=" color="success" size="small" style="margin: 5px;">
@@ -155,3 +164,4 @@
       </ion-card>
   </div>
 </ion-content>
+<!-- -->
