act registro contacto

--- a/src/app/backend/contacto/contacto.component.html
+++ b/src/app/backend/contacto/contacto.component.html
@@ -59,9 +59,9 @@
            <ion-item>   
             <ion-label >Tipo Contato</ion-label>
             <ion-select [(ngModel)]="newContacto.tipoContacto" interface="popover" placeholder="Arrendatario/Propietario">
-              <ion-select-option  value="persona">Arrendatario</ion-select-option>
-              <ion-select-option  value="empresa">Propietario</ion-select-option>
-              <ion-select-option  value="empresa">Otro</ion-select-option>
+              <ion-select-option  value="Arrendatario">Arrendatario</ion-select-option>
+              <ion-select-option  value="Propietario">Propietario</ion-select-option>
+              <ion-select-option  value="Otro Contacto">Otro</ion-select-option>
             </ion-select>
          </ion-item> 
          <ion-item>  
