--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -89,7 +89,7 @@
       </ion-card-content>
          <!--listas de propiedades Cascada--> 
          <div  *ngIf="enablelista">
-          <ion-card *ngFor="let P of Propiedades"  >
+          <ion-card *ngFor="let P of Propiedades" >
           <ion-accordion-group  [multiple]="true" [value]="['first', 'third']" >
             <ion-accordion >
               <ion-item slot="header" >      
@@ -101,61 +101,54 @@
                   <ion-col size="auto"><ion-label>{{P.numero}},</ion-label></ion-col>
                   <ion-col size="auto"><ion-label>{{P.direccion}},</ion-label></ion-col>
                   <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="person-circle" style="margin: 5px;"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>{{P.contacto}}</ion-label></ion-col>
-                        <ion-col size="auto" ><ion-icon name="call"></ion-icon></ion-col>
-                        <ion-col size="auto" ><ion-label >{{P.telefono}}</ion-label></ion-col>   
-                  <ion-col size="auto"><ion-label>{{P.referencia}}</ion-label></ion-col>
-                </ion-row>
+                </ion-row> 
               </ion-grid>
               </ion-item>
-<ion-item>
-  <div >
-    <ion-label></ion-label>
-    <ion-label></ion-label>
-  </div>
-</ion-item>
-
               <ion-item  slot="content">
+                  <!--detalles de contacto -->
                 <ion-grid [fixed]="true">
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>cuentas agua</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>cuentas electricidad</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>cuentas gas</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>cuentas internet</ion-label></ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col >
-                  <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
-                  <ion-icon name="cash-outline" ></ion-icon><ion-label>Cuentas</ion-label>
-                  </ion-button>
-                  <ion-button  (click)="addContacto(P)" color="secondary" size="small" style="margin: 5px;">
-                  <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
-                  </ion-button>
-                  <ion-button href="https://api.whatsapp.com/send?phone=56{{P.telefono}}&text=" color="success" size="small" style="margin: 5px;">
-                  <ion-icon name="logo-whatsapp"></ion-icon>
-                  </ion-button>
-                  <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
-                  <ion-icon name="create-outline"></ion-icon>
-                  </ion-button>
-                  <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
-                  <ion-icon name="trash-outline"></ion-icon>
-                  </ion-button>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
+                  <ion-row  *ngFor="let c of filtroContacto(P.id)"  >     
+                          <ion-col size="auto" ><ion-label>{{c.tipoContacto}}</ion-label></ion-col>
+                          <ion-col size="auto"> <ion-icon name="person-circle" style="margin: 5px;"></ion-icon><ion-label>{{c.nombre}} {{c.apellidop}} {{c.apellidom}}</ion-label></ion-col>
+                          <ion-col size="auto" ><ion-label ><ion-icon name="call"></ion-icon> {{c.telefono}}</ion-label></ion-col> 
+                          <ion-button href="https://api.whatsapp.com/send?phone=56{{c.telefono}}&text=" color="success" size="small" style="margin: 5px;">
+                            <ion-icon name="logo-whatsapp"></ion-icon>
+                            </ion-button> 
+                      
+          </ion-row>
+          <ion-row>
+            <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>cuentas agua</ion-label></ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>cuentas electricidad</ion-label></ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>cuentas gas</ion-label></ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>cuentas internet</ion-label></ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col >
+            <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
+            <ion-icon name="cash-outline" ></ion-icon><ion-label>Cuentas</ion-label>
+            </ion-button>
+            <ion-button  (click)="addContacto(P)" color="secondary" size="small" style="margin: 5px;">
+            <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
+            </ion-button>
+            <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
+            <ion-icon name="create-outline"></ion-icon>
+            </ion-button>
+            <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
+            <ion-icon name="trash-outline"></ion-icon>
+            </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
               </ion-item>
             </ion-accordion>
           </ion-accordion-group>
