--- a/src/global.scss
+++ b/src/global.scss
@@ -48,9 +48,7 @@ ion-card{
 
 
 
-    ion-label {
-        display: block;
-    }
+
 
     ion-slides {
         margin-bottom: 50px;
@@ -66,71 +64,41 @@ ion-card{
     ion-buttons{
         margin: auto;
         max-width: 50px;
-        
-
-    
     }   
- 
 
 .main_content_div {
     width: 100%;
     padding: 16px;
-
-
+}
     .logo{
         margin: auto;
         max-width: 300px;
         align-items: center;
     }
-    .bold_lbl {
-        font-family: 'medium';
-        text-align: center;
-        font-size: 18px;
-        margin-bottom: 20px;
-    }
-
-    .simple_lbl {
-        font-size: 15px;
-        color: white;
-        text-align: center;
-    }
- 
-  
-    ion-label {
-        display: block;
-    }
 
     ion-input {
         margin: auto;
-       
         background: rgba(70, 65, 69, 0.3);
         border-radius: 5px;
-     //   margin-bottom: 20px;
-     //   --padding-start: 8px;
         color: white;
-
-        ion-icon {
+ion-icon {
             margin-left: 10px;
             color: white;
         }
     }
 
-
- 
     .bold_lbl {
-        font-family: 'semi-bold';
-        font-size: 26px;
+        margin: auto;
         text-align: center;
         color: black;
+        font-size: 18px;
+        display: block;
     }
 
     .small_lbl {
+        margin: auto;
         text-align: center;
         color: black;
         font-size: 14px;
-        margin-bottom: 30px;
     }
 
- 
-
-}
